Fixing height spacing on button bar

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -313,7 +313,6 @@
 
 .button-bar {
   padding: $spacing-unit/2 0 0 0;
-  flex: 1;
   &__subscribe {
     text-transform: uppercase;
     color: $grey-color;
